<resources>
    <string name="app_name">MyEcom Application</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catagories">Catagories</string>
    <string name="user">User</string>
    <string name="smart_shopper">Smart Shoppers</string>
    <string name="cart">Cart</string>
    <string name="empty_cart">Cart is Empty</string>
    <string name="cart_empty">Your Cart is Empty</string>
    <string name="your_cart">Your Cart</string>
    <string name="address">Adress</string>
    <string name="change">Change</string>
    <string name="delivery_charges_applied">Delivery Charges are applied in order of below 500 Rupees</string>
    <string name="orderQuantity">Order Quantity</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="previous_orders">Previous Orders</string>

    <string name="your_account">Edit Profile</string>
    <string name="order_status">Order Status</string>
    <string name="contact_us">Contact us</string>
    <string name="mail_us">Mail us</string>
    <string name="ecom">Ecom</string>
    <string name="username">Enter your email id</string>
    <string name="entr_password">Enter Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User? Sign up to continue</string>
    <string name="fail_to_sign_in">"Fail to Sign In: %1$s "</string>
    <string name="sign_up">Sign Up</string>
    <string name="exit">Exit</string>
    <string name="name">Name</string>
    <string name="conf_password">Please Enter your password again</string>
    <string name="valid_username">Please Enter a Valid Username</string>
    <string name="valid_email">Please Enter a valid Email Address</string>
    <string name="passwords__shd_same_error">Two Passwords should same</string>
    <string name="wrong_psswd">Please create a password atleast have 8 charecters</string>
    <string name="fail_to_signup">Failed to create an account</string>
    <string name="signfailed">Failed due to:%1$s</string>
    <string name="log_out">Log Out</string>
    <string name="sign_cmplt">Sign Up process Complete</string>
    <string name="failed_to_register">Failed To Register User:%1$s</string>
    <string name="enter_the_product_name">Enter the product name</string>
    <string name="product_name">Product Name: </string>
    <string name="product_price">Product Price: </string>
    <string name="enter_the_product_price">Enter the price</string>
    <string name="product_quantity">Quantity</string>
    <string name="enter_the_product_quantity">Enter the product quantity</string>
    <string name="avillable">Avillability</string>
    <string name="search">Search</string>
    <string name="add">Add Product</string>
    <string name="product_category">Product Category</string>
    <string name="select_a_image_of_the_product">Select a Image of The Product</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="uploaded_succesfully">Uploaded Successfully</string>
    <string name="field_error">Field must be filled</string>
    <string name="product_added">Prodcut added Successfully</string>
    <string name="failed_add_product">Failed To Add: %1$s</string>
    <string name="error">Error to fetch data: %1$s</string>
    <string name="select_category">Select Category</string>
    <string name="product_description">Product Description</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="failed_to_fetch">Failed to fetch data:%1$s</string>
    <string name="product_added_to_cart">Product Added to Cart Successfully</string>
    <string name="item_removed_succesfully">Item Removed Successfully</string>
    <string name="item_removed_failed">Failed to remove:%1$s</string>
    <string name="deleivered_to_user_birlapur_743318">Delivered to %1$s Birlapur- 743318</string>
    <string name="cannot_fetch_addrss">Cannot fetch the current Address</string>
    <string name="save_and_continue">Save and continue</string>
    <string name="enter_area">Enter the Area/Colony/Flat No./ Building No.</string>
    <string name="enter_city">Enter the City/Village</string>
    <string name="state">State</string>
    <string name="enter_pin">Enter the pincode of the area</string>
    <string name="district">District</string>
    <string name="enter_landmark">Enter the Landmark</string>
    <string name="save">Yes, Use This Address</string>
    <string name="type_manually">Type manually</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="address_added">Address added Sucessfully</string>
    <string name="failed_add_address">Failed To add address: %1$s</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone Number</string>
    <string name="change_password">Change Password</string>
    <string name="change_address">Change Address</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter your old password</string>
    <string name="new_password">New Password</string>
    <string name="reenter_pswd">Reenter your password</string>
    <string name="pswd_change_scsfly">Password Changed Successfully</string>
    <string name="pswd_change_failed">Password changed Failed: %1$s</string>
    <string name="something_went_wrong">Something Went Wrong: %1$s</string>
    <string name="profile_changed_successfully">Profile Changed Successfully</string>
    <string name="dismiss">Dismiss</string>
    <string name="sent_link">Send Link</string>
    <string name="resend_link">Resend Link</string>
    <string name="email_sent">Email sent successfully to registered emailId</string>
    <string name="email_sent_faild">Could not sent mail: %1$s</string>
    <string name="set_delievry_locaton">Set Delivery Location</string>
    <string name="email_veified">Email has been verified</string>
    <string name="verify_mail">PLease Verify your email</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="ok">Ok</string>
    <string name="forget_password_link">Forget Password Link sent to the email address</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="otp_sent_to_phone">OTP sent to your registered phone number :</string>
    <string name="verify">Verify</string>
    <string name="send_otp">Send Otp</string>
    <string name="correct_number">Please Enter a correct phone number</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="enter_valid_number">Please enter a valid phone number</string>
    <string name="wrong_otp">OTP does not match</string>
</resources>