<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:id="@+id/ll"
    tools:context=".edit_profile.PasswordChnageActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/old_password"
        app:startIconDrawable="@drawable/ic_key"
        app:helperText="@string/enter_old_password"
        android:padding="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPswdEdttxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:shadowColor="@color/logo_color" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"

        android:hint="@string/new_password"
        app:startIconDrawable="@drawable/ic_phone"
        app:helperText="@string/entr_password"
        android:padding="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPswdEdttxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:shadowColor="@color/logo_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/reenter_pswd"
        app:helperText="@string/conf_password"
        app:startIconDrawable="@drawable/ic_phone"
        android:padding="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPswdCnfEdttxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:shadowColor="@color/logo_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/changeChnPasswordBtn"
        android:backgroundTint="@color/danger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/change_password"
        />


</LinearLayout>