<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/cdL"
    tools:context=".sign_in.ForgetPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ecom_logo"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgetUserEmailEdt"
        android:hint="@string/username"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic__mail"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="470dp"
        android:text="@string/ok"
        android:drawableEnd="@drawable/ic_sign_in"
        android:id="@+id/emailFrgtPswdSentBtn"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/passwrdEmailSEntTv"
        android:layout_marginBottom="480dp"
        android:text="@string/forget_password_link"
        android:visibility="gone"


        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>