<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".user.UserFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <ImageView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/ecom_logo"
                android:padding="5dp"
                android:elevation="60dp"
                android:fadingEdge="horizontal"
                android:outlineSpotShadowColor="@color/teal_200"
                />

            <TextView
                android:id="@+id/userTv"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="100dp"
                android:padding="5dp"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@drawable/backgrd_sqr_for_usr"
                android:text="@string/your_account"/>

            <TextView
                android:id="@+id/previous_ordersTv"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="5dp"
                android:background="@drawable/backgrd_sqr_for_usr"
                android:text="@string/previous_orders" />

            <TextView
                android:id="@+id/orderStatusTv"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="5dp"
                android:background="@drawable/backgrd_sqr_for_usr"
                android:text="@string/order_status"/>


            <Button
                android:id="@+id/contactUsBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="80dp"
                android:padding="5dp"
                android:drawableLeft="@drawable/ic_baseline_call_24"
                android:backgroundTint="@color/logo_color"
                android:text="@string/contact_us"/>

            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="80dp"
                android:padding="5dp"
                android:drawableLeft="@drawable/ic_logout_power_icon"
                android:textColor="@color/white"
                android:backgroundTint="@color/logo_color"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/log_out"/>








        </LinearLayout>
    </ScrollView>


</LinearLayout>